Paris market + new docs

--- a/templates/autotrader.html
+++ b/templates/autotrader.html
@@ -769,6 +769,7 @@ const AT_TZ_LABELS = {
     'KORD': 'CHI',
     'KMIA': 'MIA',
     'KDAL': 'DAL',
+    'LFPG': 'PAR',
     'EGLC': 'LON',
     'LTAC': 'ANK'
 };
